# corpus-tcc-lidae

./: .gitignore  EXPLICACAO_LDA.md  GUIA_TIPO_TCC.md  IDENTIDADE_VISUAL_NECPF.md  IMPLEMENTACAO.md  LAYOUT.md  MAPEAMENTO_NOMES_REVISAO.csv  MAPEAMENTO_NOMES_REVISAO.xlsx  PROTOCOLO_DADOS.md  RELATORIO_DESENVOLVIMENTO.md  SOBRE_LIDAE.md  analise_corpus.py  analise_por_curso.py  consolida_corpus.py  dashboard.py  gerar_egressos_publico.py  importar_catalogacao.py  inspeciona_topicos_k4.py  integra_novos_tccs.py  pyproject.toml  requirements.txt  verifica_inconsistencias.py
.streamlit/: config.toml
dados/: FLUXO.md  LEIA-ME_egressos_DTI.md  de_para_cursos_proeg.csv  egressos_por_ano.csv  egressos_por_curso.csv  egressos_serie_historica.csv
dados/canonico/: de_para_cursos_proeg.csv  egressos_por_curso.csv  egressos_publico.csv  egressos_serie_historica.csv
outputs/: corpus_tccs_consolidado.csv  corpus_tccs_consolidado.xlsx  corpus_tccs_consolidado_147.csv  relatorio_consolidacao.txt  relatorio_tipo_tcc_vazio.csv  relatorio_tipo_tcc_vazio.xlsx
outputs/analise/: analise_por_curso.json  analise_por_curso.md  analise_tematica_ciencias_biologicas.md  analise_tematica_historia.md  analise_tematica_insikiran_comunicacao.md  analise_tematica_insikiran_natureza.md  analise_tematica_insikiran_sociais.md  analise_tematica_musica.md  analise_tematica_pedagogia.md  cobertura_por_curso.csv  cobertura_por_curso.md  corpus_tccs_analisado.csv  corpus_tccs_analisado.xlsx  relatorio_exploratorio.txt  topicos_K4_para_revisao.md
outputs/backups/: ANTES_LIMPEZA_20260617_085323.csv  (+14 more)
(+3 files in other folders)
