[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corpus-tcc-lidae"
version = "1.0.0"
description = "Dashboard de análise de TCCs das licenciaturas UFRR"
requires-python = ">=3.11,<3.12"

dependencies = [
    "streamlit==1.40.0",
    "pandas==2.2.0",
    "plotly==5.22.0",
    "streamlit-option-menu==0.4.0",
    "scikit-learn==1.5.1",
    "rapidfuzz==3.13.0",
    "openpyxl==3.1.2",
    "matplotlib==3.9.1",
    "seaborn==0.13.2",
    "networkx==3.2.1",
]

[tool.setuptools]
packages = []
